--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,11 @@ a {
 	color: blue;
 }
 
-input[type=text], input[type=password], input[type=email], input[type=number], select {
+input[type=text],
+input[type=password],
+input[type=email],
+input[type=number],
+select {
 	width: 70%;
 	margin: 8px 0 8px 50px;
 	display: inline-block;
@@ -16,19 +20,16 @@ input[type=text], input[type=password], input[type=email], input[type=number], s
 }
 
 input.toggle-round {
-	display:none;
+	display: none;
 }
 
-input.toggle-round + label {
+input.toggle-round+label {
 	display: block;
 	position: relative;
 	cursor: pointer;
 	margin-right: 20px;
 	margin-top: 5px;
 	margin-bottom: 5px;
-}
-
-input.toggle-round + label {
 	padding: 1px;
 	width: 60px;
 	height: 30px;
@@ -37,22 +38,23 @@ input.toggle-round + label {
 	border: 1px solid #ccc;
 }
 
-input.toggle-round + label:after {
+input.toggle-round+label:after {
 	display: block;
 	position: absolute;
 	content: "";
-	width: 25px; height: 25px;
+	width: 25px;
+	height: 25px;
 	background-color: white;
 	border-radius: 100%;
 	box-shadow: 0 2px 3px #888;
 	transition: margin 0.5s;
 }
 
-input.toggle-round:checked + label {
+input.toggle-round:checked+label {
 	background-color: #9bd1e3;
 }
 
-input.toggle-round:checked + label:after {
+input.toggle-round:checked+label:after {
 	margin-left: 30px;
 }
 
