--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/*
+ * SPDX-FileCopyrightText: 2025 Lennart Dohmann <lennart.dohmann@gdata.de>
+ *
+ * SPDX-License-Identifier: AGPL-3.0-or-later
+ */
+
 .input_field {
 	width: 100%;
 }
@@ -27,7 +33,7 @@ input.toggle-round+label {
 	display: block;
 	position: relative;
 	cursor: pointer;
-	margin-right: 20px;
+	margin-inline-end: 20px;
 	margin-top: 5px;
 	margin-bottom: 5px;
 	padding: 1px;
@@ -55,7 +61,7 @@ input.toggle-round:checked+label {
 }
 
 input.toggle-round:checked+label:after {
-	margin-left: 30px;
+	margin-inline-start: 30px;
 }
 
 #advanced_settings {
